# caretchen

./: .gitignore  AGENTS.md  README.md  SPEC.md  cli.py  config.toml  dictapaste.yaml  pyproject.toml  requirements.txt  start.sh  start_windows.ps1
docs/plans/dictapaste/: PLAN-core-stabilization.md  PLAN-v2-improvements.md
docs/plans/streaming/: PLAN-streaming-response.md
scripts/: build_linux.sh  build_windows.ps1
src/dictapaste/: __init__.py  __main__.py  app_state.py  audio.py  autostart.py  cli.py  commands.py  config.py  conflict.py  history.py  i18n.py  icon.py  input_hook.py  input_hook_evdev.py  input_hook_wayland.py  input_hook_x11.py  llm.py  logging_setup.py  main.py  mode_popup.py  modes.py  paste.py  paste_wayland.py  pipeline.py  prompt.py  settings_dialog.py  stt.py  tray.py
tests/: test_audio.py  test_autostart.py  test_commands.py  test_config.py  test_config_versioning.py  test_conflict.py  test_history.py  test_i18n.py  test_icon.py  test_llm.py  test_modes.py  test_paste.py  test_pipeline.py  test_prompt.py  test_state_machine.py  test_stt.py
