[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dictapaste"
version = "0.1.0"
description = "Cross-platform tray dictation app with optional local LLM refinement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pynput>=1.7",
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "numpy>=1.26",
  "faster-whisper>=1.0",
  "httpx>=0.27",
  "pyperclip>=1.9",
  "tomli-w>=1.0",
  "PyYAML>=6.0",
  "evdev>=1.9; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyinstaller>=6.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
dictapaste = "dictapaste.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
